Actualización index.html: añadido 4-2-3-1 al menú de formaciones

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
               <option value="4-3-3">4-3-3</option>
               <option value="3-5-2">3-5-2</option>
               <option value="5-3-2">5-3-2</option>
+              <option value="4-2-3-1">4-2-3-1</option>
             </select>
           </div>
 
