Forzar actualización: añadido ?v=2 a CSS y JS en index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pizarra Táctica de Fútbol - RonalDev</title>
-    <link rel="stylesheet" href="styles.css" />
+    <!-- Forzar actualización con ?v=2 -->
+    <link rel="stylesheet" href="styles.css?v=2" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   </head>
   <body>
@@ -172,6 +173,7 @@
       </div>
     </div>
 
-    <script src="script.js"></script>
+    <!-- Forzar actualización con ?v=2 -->
+    <script src="script.js?v=2"></script>
   </body>
 </html>
